--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <div class="carousel-btn">
 
                                 <a class="btn btn-custom" href="testimonials.html">Testimonials</a>
-                                <a class="btn btn-custom btn-play" data-toggle="modal" data-src="vid/twentyfrom20_vid1.mp4" data-target="#videoModal">Watch Video</a>
+                               
 
 
                             </div>
@@ -100,7 +100,7 @@
                             <div class="carousel-btn">
 
                                 <a class="btn btn-custom" href="testimonials.html">Testimonials</a>
-                                <a class="btn btn-custom btn-play" data-toggle="modal" data-src="vid/AWS_eKasi_vid1.mp4" data-target="#videoModal">Watch Video</a>
+                                <a class="btn btn-custom btn-play" href="tvhVideo.html">Watch Video</a>
 
                             </div>
                         </div>
@@ -117,7 +117,7 @@
                             </p>
                             <div class="carousel-btn">
                                 <a class="btn btn-custom" href="testimonials.html">Testimonials</a>
-                                <a class="btn btn-custom btn-play" data-toggle="modal" data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">Watch Video</a>
+                                <a class="btn btn-custom btn-play" href="NoVideo.html">Watch Video</a>
                             </div>
                         </div>
                     </div>
@@ -132,7 +132,7 @@
                             </p>
                             <div class="carousel-btn">
                                 <a class="btn btn-custom" href="testimonials.html">Testimonials</a>
-                                <a class="btn btn-custom btn-play" data-toggle="modal" data-src="vid/Ndumo_Community_vid1.mp4" data-target="#videoModal">Watch Video</a>
+                                <a class="btn btn-custom btn-play" href="ndumoVideo.html">Watch Video</a>
                             </div>
                         </div>
                     </div>
@@ -477,12 +477,12 @@
     </section>
 
         <!-- Team Start -->
-       <section id="team" style="padding-top: 100px; margin-top: -50px;"> 
+       <section id="team" style="padding-top: 100px; margin-top: -50px;">         
         <div  class="team">
             <div class="container">
                 <div class="section-header text-center">
                     <p>Meet The Team</p>
-                    <h2>Amazing crew supporting our charitable endeavor</h2>
+                    <h2>Founders</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-3 col-md-6">
@@ -492,7 +492,7 @@
                             </div>
                             <div class="team-text">
                                 <h2>Mashitishi Phurutsi</h2>
-                                <p>ICEP Chief Executive Officer</p>
+                                <p>ICEP<br> Chief Executive Officer</p>
 
                             </div>
                         </div>
@@ -509,18 +509,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="team-item">
-                            <div class="team-img">
-                                <img src="img/team-3.png" alt="Team Image">
-                            </div>
-                            <div class="team-text">
-                                <h2>ICEP Team</h2>
-                                <p>Scrum Master, Business Analysts, Developers, System Analyst</p>
 
-                            </div>
-                        </div>
-                    </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
@@ -552,7 +541,7 @@
                             </div>
                             <div class="team-text">
                                 <h2>Dr Cheryl Ogilvie</h2>
-                                <p>Ndumo Community Centre Project Leader</p>
+                                <p>Ndumo<br> Community Centre<br> Project Leader</p>
                             </div>
                         </div>
                     </div>
@@ -563,7 +552,18 @@
                             </div>
                             <div class="team-text">
                                 <h2>Prof Lydia Mphahlele</h2>
-                                <p>Grade R Centre of Excellence Project Leader</p>
+                                <p>Grade R<br> Centre of Excellence<br> <b>Project Leader</b></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="team-item">
+                            <div class="team-img">
+                                <img src="img/Apane.jpeg" alt="Team Image">
+                            </div>
+                            <div class="team-text">
+                                <h2>Inocent Apane</h2>
+                                <p><b>Project Manager</b> (BA)</p>
                             </div>
                         </div>
                     </div>
@@ -572,6 +572,155 @@
         </div>
     </section>  
         <!-- Team End -->
+
+                <!-- Team Start -->
+       <section id="team" style="padding-top: 100px; margin-top: -50px;"> 
+        <div  class="team">
+            <div class="container">
+                <div class="section-header text-center">                    
+                    <h2>Developers</h2>       
+                </div>
+                <div class="row">
+                    <div class="col-lg-3 col-md-6">
+                        <div class="team-item">
+                            <div class="team-img">
+                                <img src="img/Tshiamo.jpeg" alt="Team Image">
+                            </div>
+                            <div class="team-text">
+                                <h2>Tshiamo Matiza</h2>
+                                <p><b>Full Stack</b> Developer</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="team-item">
+                            <div class="team-img">
+                                <img src="img/Msizi.jpeg" alt="Team Image">
+                            </div>
+                            <div class="team-text">
+                                <h2>Msizi Makaula</h2>
+                                <p><b>Front-End</b> Developer</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="team-item">
+                            <div class="team-img">
+                                <img src="img/Fundiswa.jpeg" alt="Team Image">
+                            </div>
+                            <div class="team-text">
+                                <h2>Fundiswa Khanyi</h2>
+                                <p><b>Full Stack</b> Developer</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="team-item">
+                            <div class="team-img">
+                                <img src="img/team-4.png" alt="Team Image">
+                            </div>
+                            <div class="team-text">
+                                <h2>Ziyanda Msibi</h2>
+                                <p><b>Front-End</b> Developer</p>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+          
+                </div>
+            </div>
+        </div>
+    </section>  
+        <!-- Team End -->
+                        <!-- Team Start -->
+       <section id="team" style="padding-top: 100px; margin-top: -50px;"> 
+        <div  class="team">
+            <div class="container">
+                <div class="section-header text-center">                    
+                    <h2>Business Analyst</h2>       
+                </div>
+                <div class="row">
+
+                    <div class="col-lg-3 col-md-6">
+                        <div class="team-item">
+                            <div class="team-img">
+                                <img src="img/Micheal.jpeg" alt="Team Image">
+                            </div>
+                            <div class="team-text">
+                                <h2>Micheal Sibanda</h2>
+                                <p><b>Scrum Master</b> (BA)</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="team-item">
+                            <div class="team-img">
+                                <img src="img/Mbali.jpeg" alt="Team Image">
+                            </div>
+                            <div class="team-text">
+                                <h2>Mbali Madlingozi</h2>
+                                <p><b>System Tester</b> (BA)</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="team-item">
+                            <div class="team-img">
+                                <img src="img/Lesedi.jpeg" alt="Team Image">
+                            </div>
+                            <div class="team-text">
+                                <h2>Lesedi Mangena</h2>
+                                <p><b>Business System Analyst</b> (BA)</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="team-item">
+                            <div class="team-img">
+                                <img src="img/Karebelo.jpeg" alt="Team Image">
+                            </div>
+                            <div class="team-text">
+                                <h2>Karabelo Motaung</h2>
+                                <p><b>Business System Analyst</b> (BA)</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="team-item">
+                            <div class="team-img">
+                                <img src="img/Lesego.jpeg" alt="Team Image">
+                            </div>
+                            <div class="team-text">
+                                <h2>Lesego Mokoena</h2>
+                                <p><b>System Analyst</b> (BA)</p>
+                            </div>
+                        </div>
+                    </div>      
+                    <div class="col-lg-3 col-md-6">
+                        <div class="team-item">
+                            <div class="team-img">
+                                <img src="img/Mohau.jpeg" alt="Team Image">
+                            </div>
+                            <div class="team-text">
+                                <h2>Mohau Rakolota</h2>
+                                <p><b>System Analyst</b> (BA)</p>
+                            </div>
+                        </div>
+                    </div>   
+                </div>
+            </div>
+        </div>
+    </section>  
+        <!-- Team End -->
+
 
         <!-- Donate Start -->
        <section id="donate" style="padding-top: 78px; margin-top: -50px;"> 
